# uwm-cs760-hw4

./: pyproject.toml
doc/: hw4.tex
src/hw4/: naive_bayes.py  nn_torch.py  q3-1.py  q3_1.py  q3_2.py  q3_3.py  q3_4.py  q3_5.py  q3_6.py  q3_7.py
